syntax = "proto3";
option optimize_for = SPEED;
option java_package="zzzProtobuf2";
option java_outer_classname = "StudnetInfo";

//protobuf 可以使用message管理其他的message

message Mymessage{

    //定义一个枚举类型
    enum DataType{
        StudentType = 0;//enum编号从0开始
        WorkerType = 1;
    }
    //用data_Type来表示传递的是哪一个枚举类型
    DataType data_Type = 1;

    //表示枚举类型最多只能出现其中一个，节省空间
    oneof dataBody{
        Student student = 2;
        Worker worker = 3;
    }
}


message Student{
    int32 id = 1;
    string name = 2;
}

message Worker{
    string name =1;
    int32 age=2;
}